--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "2.4.6",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.32.0",
+    "@ionic-native/file-opener": "^5.32.0",
+    "@ionic-native/full-screen-image": "^5.32.1",
     "@ionic-native/native-geocoder": "^5.31.1",
     "@ionic-native/pdf-generator": "^5.32.0",
+    "@ionic-native/photo-viewer": "^5.32.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -32,12 +36,19 @@
     "@types/googlemaps": "^3.39.12",
     "bootstrap": "^4.6.0",
     "capacitor-googlemaps-native": "0.0.6",
+    "com-sarriaroman-photoviewer": "^1.2.5",
     "cordova-browser": "^6.0.0",
     "cordova-pdf-generator": "^2.1.1",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-opener2": "^3.0.5",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-sqlite-storage": "^5.1.0",
+    "es.keensoft.fullscreenimage": "^0.2.10",
     "html2canvas": "^1.0.0-rc.7",
+    "ionic-rating-component": "^1.1.6",
+    "ionic5-star-rating": "https://github.com/JeongJun-Lee/ionic5-star-rating/tarball/master",
     "jspdf": "^2.3.1",
+    "pdfmake": "^0.1.71",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.9",
@@ -83,7 +94,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file-opener2": {},
+      "cordova-plugin-file": {},
+      "es.keensoft.fullscreenimage": {},
+      "com-sarriaroman-photoviewer": {}
     },
     "platforms": [
       "browser"
